# HalfEdge-Structure

./: CMakeLists.txt
Apps/: CMakeLists.txt  HalfEdge.h  main.cpp
